[package]
name = "omegajail"
version = "3.8.4"
description = "The omegaUp sandbox"
license = "BSD"
repository = "https://github.com/omegaup/omegajail"
readme = "README.md"
edition = "2021"
default-run = "omegajail"

[[bin]]
name = "omegajail"
path = "src/omegajail.rs"

[[bin]]
name = "java-compile"
path = "src/java_compile.rs"

[[bin]]
name = "omegajail-test-helper"
path = "src/test_helper.rs"

[lib]
name = "omegajail"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
flexbuffers = "2.0"
itertools = "0.10"
libc = "0.2"
log = "0.4"
nix = "0.23"
passfd = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1"
syscalls = "0.5"

[dev-dependencies]
base64 = "0.13"
once_cell = "1.9"
tempdir = "0.3"
